# pyssm-client

./: .gitignore  CLAUDE.md  PLAN.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: 03_integration_cli.md
examples/: file_copy_example.py
src/pyssm_client/: constants.py
src/pyssm_client/cli/: coordinator.py  main.py  port_forward.py  types.py
src/pyssm_client/communicator/: data_channel.py  message_handlers.py  message_parser.py  smux.py  websocket_channel.py
src/pyssm_client/file_transfer/: client.py  types.py
src/pyssm_client/utils/: command.py
src/session_manager_plugin/: __init__.py  constants.py  exec.py
src/session_manager_plugin/cli/: __init__.py  coordinator.py  main.py  types.py
src/session_manager_plugin/communicator/: __init__.py  data_channel.py  message_handlers.py  message_parser.py  protocol.py  websocket_channel.py
src/session_manager_plugin/file_transfer/: __init__.py  client.py  types.py
src/session_manager_plugin/session/: __init__.py  plugins.py  protocols.py  session.py  session_handler.py
src/session_manager_plugin/session/plugins/: __init__.py  base.py  port.py  (+4 more)
src/session_manager_plugin/utils/: command.py  logging.py
tests/: test_file_transfer.py
tests/integration/: test_session_integration.py
tests/unit/: test_ack_format.py  test_data_channel_input.py  test_out_of_order_buffering.py  test_port_forward.py
tests/unit/test_communicator/: test_types.py  test_utils.py  test_websocket_channel.py  test_websocket_simple.py
tests/unit/test_session/: test_session.py  test_types.py
