[project]
name = "python-session-manager-plugin"
version = "0.1.0"
description = "Python implementation of AWS Session Manager Plugin"
authors = [
    {name = "Damon Cortesi", email = "dacort@amazon.com"},
]
dependencies = [
    "websockets>=15.0.1",
    "boto3>=1.34.0",
    "click>=8.1.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.scripts]
session-manager-plugin = "session_manager_plugin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/session_manager_plugin"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "coverage>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
